[metadata]
name = Distutils2
version = 1.0a3
summary = Python Distribution Utilities
description-file = README.txt
home-page = http://bitbucket.org/tarek/distutils2/wiki/Home
author = Tarek Ziade
author-email = tarek@ziade.org
license = PSF
keywords = packaging, distutils
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Utilities

[files]
packages =
    distutils2
    distutils2.command
    distutils2.compiler
    distutils2.pypi
    distutils2.tests
    distutils2.tests.fixer
    distutils2._backport
    distutils2._backport.tests
package_data =
    distutils2._backport = sysconfig.cfg
    distutils2.command = wininst*.exe
scripts =
    pysetup

# TODO build hashlib for Python < 2.4

[build_ext]
# needed so that tests work without mucking with sys.path
inplace = 1

[upload_docs]
upload-dir = docs/build/html
